--- a/index.html
+++ b/index.html
@@ -4,54 +4,61 @@
     <meta charset="utf-8">
     <title>Chocolate Pizza</title>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link href="" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Jockey+One|Patrick+Hand|Yellowtail" rel="stylesheet">
 	</head>
 	<body>
-		<div id="navbar">
-      <img id="lg.logo" src="images/logo.png" alt="Logo">
-      <h1 id="nav1">Delicious<br id="nav2">THE BEST FOOD BLOG ON THE WEB</h1>
+		<div id="body">
+			<div id="navbar">
+			<img id="lg.logo" src="images/logo.png" alt="Logo" align="left">
+			<ul>
+				<li id="top">Delicious</li>
+				<li id="bottom">THE BEST FOOD BLOG ON THE WEB</li>
+			</ul>
       <img class="icons" src="images/fb-icon.png" alt="Facebook Icon">
       <img class="icons" src="images/twit-icon.png" alt="Twitter Icon">
       <img class="icons" src="images/gp-icon.png" alt="Google+ Icon">
       <img class="icons" src="images/insta-icon.png" alt="Instagram Icon">
       <img class="icons" src="images/flic-icon.png" alt="Flickr Icon">
       <img class="icons" src="images/pint-icon.png" alt="Pinterist Icon">
-      <img class="icons" src="images/rss-icon.png" alt="RSS Icon">
+      <img class="icons" id="rssicon" src="images/rss-icon.png" alt="RSS Icon">
       <img class="icons" src="images/mail-icon.png" alt="Email Icon">
     </div>
-    <div id="body">
-      <h1 id="heading">Chocolate Pizza</h1>
-      <h2 id="postedon">POSTED ON 15 DEC 2013 / DESSERTS<img id="print" src="images/print-icon.png" alt="Print Icon">
+		<hr>
+      <h1>Chocolate Pizza</h1>
+      <h2>POSTED ON 15 DEC 2013 / DESSERTS<img id="print" src="images/print-icon.png" alt="Print Icon" height="10px" width="20px">&nbsp PRINT</h2>
       <img id="pizza" src="images/choco-pizza.png" alt="Chocolate Pizza">
-      <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
+      <p>&nbsp &nbsp &nbsp For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
       <br>
-      <p>Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p>
+      <p>&nbsp &nbsp &nbsp Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p>
       <br>
-      <p>Using an ice cream machine, pur liquids into the frozen basin and process according to the manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
+      <p>&nbsp &nbsp &nbsp Using an ice cream machine, pur liquids into the frozen basin and process according to the manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
       <div id="recipe">
-      <ul id="ingredients">
-        <li>1 1/2 cups milk<li>
-        <li>1/2 cup mascarpone<li>
-        <li>1/2 tsp pink salt<li>
-        <li>1 lb Black Mission Figs<li>
-        <li>1/2 cup brown sugar<li>
-        <li>2-4 tbsp water<li>
-        <li>1 1/2 cups heavy cream<li>
-        <li><del>1/3 granulated sugar</del><li>
-        <li><del>2 egg yolks</del><li>
-        <li>1 lemon, juiced<li>
-        <li>2 tbsp butter<li>
-        <li>1 cup honey roasted pecans, roughly chopped<li>
+      <ul id="ing">
+        <li class="ingredients">&#9633; 1 1/2 cups milk<li>
+        <li class="ingredients">&#9633; 1/2 cup mascarpone<li>
+        <li class="ingredients">&#9633; 1/2 tsp pink salt<li>
+        <li class="ingredients">&#9633; 1 lb Black Mission Figs<li>
+        <li class="ingredients">&#9633; 1/2 cup brown sugar<li>
+        <li class="ingredients">&#9633; 2-4 tbsp water<li><br>
+        <li class="ingredients">&#9633; 1 1/2 cups heavy cream<li>
+        <li class="ingredients">&#9633; <del>1/3 granulated sugar</del><li>
+        <li class="ingredients">&#9633; <del>2 egg yolks</del><li>
+        <li class="ingredients">&#9633; 1 lemon, juiced<li>
+        <li class="ingredients">&#9633; 2 tbsp butter<li>
+        <li class="ingredients">&#9633; 1 cup honey roasted pecans, roughly chopped<li>
       </div>
+			<hr>
       <div id="author">
         <img id="authorpic" src="images/van-pic.png" alt="Vanessa Stevenson Photo">
-        <h1 id="name">Vanessa Stevenson</h1>
-        <h2 id="bio">Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</h2>
-        <button id="share" type="submit" height="100px" width="150px">Share Recipe</button>
+				<ul>
+        <li id="name">Vanessa Stevenson</li>
+        <li id="bio">Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</li>
+				</ul>
+        <button id="share" type="submit" align="right">SHARE RECIPE</button>
 			</div>
-    </div>
 		<footer id="footer">
 			<img id="sm.logo" src="images/small-logo.png" alt="Small Logo">
 			<p>Delicious &copy 2013 &middot All Rights Reserved.<br>Proudly published with Ghost.</p>
+		</div>
 	</body>
 </html>
